# stock-evaluator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/stock_predictor/: __init__.py  main.py
src/stock_predictor/agent/: __init__.py  graph.py  nodes.py  state.py
src/stock_predictor/agent/nodes/: __init__.py  base.py  bearish_analyst.py  bullish_analyst.py  fetch_data.py  moderator.py
src/stock_predictor/services/: __init__.py  data_fetcher.py  sentiment.py
src/stock_predictor/static/: app.js  index.html  style.css
tests/: mock_data_fetcher.py  test_agent_flow.py  test_data_fetcher.py
